added new payment method

--- a/main.html
+++ b/main.html
@@ -1,7 +1,8 @@
 <html>
     <title>
-        Git home page
+        payment
     </title>
+    <h1>payment sucess -COD</h1>
     <body>
     </body>
 </html>
